FEDIZ-84 - Support wreq parameter in SP/IdP
Conflicts:
	plugins/core/src/main/java/org/apache/cxf/fediz/core/FederationProcessorImpl.java
	services/idp/src/main/webapp/WEB-INF/federation-validate-request.xml
	systests/tomcat7/pom.xml